# enhanced-document-understanding-on-aws

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE.txt  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
deployment/: build-s3-dist.sh
deployment/cdk-solution-helper/: index.js  package-lock.json  package.json
source/: pre-build-jars.sh  run-all-tests.sh
source/email-templates/: processing_complete.email.template  processing_failure.email.template
source/infrastructure/: cdk.json  jest.config.js  package-lock.json  package.json  tsconfig.json
source/infrastructure/lib/: application-setup.ts  dus-stack.ts  ui-infrastructure.ts
source/infrastructure/test/: application-setup.test.ts  dus-stack.test.ts  ui-infrstructure.test.ts
source/infrastructure/test/mock-lambda-func/python-lambda/: pyproject.toml
source/lambda/: .eslintrc.js
source/lambda/create-presigned-url/: index.js  package-lock.json  package.json
source/lambda/custom-resource/: .gitignore  (+5 more)
source/lambda/layers/aws_boto3/: .gitignore  pyproject.toml  requirements.txt
source/ui/: README.md  jest.config.js  package-lock.json  package.json
source/workflow-config/: default.json  multi-doc-textract-entity-medical-pii.json  multi-doc-textract-entity-pii.json  multi-doc-textract-entity.json  multi-doc-textract-with-feature-type.json  single-doc-entity-detection.json  single-doc-entity-redaction.json  single-doc-textract-entitty-pii.json  single-doc-textract-entity-medical.json  single-doc-textract-entity-pii.json  single-doc-textract-entity.json  single-doc-textract.json
(+608 files in other folders)
