[tool.poetry]
name = "mock-python-lambda"
version = "1.1.8"
authors = [ "Amazon Web Services" ]
description = "Mock function for infra testing"
packages = [
    { include = "*.toml" },
    { include = "*.lock" },
]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = [ "poetry-core>=1.9.0" ]
build-backend = "poetry.core.masonry.api"